# stringfmt

./: .gitignore  CLAUDE.md  Data-Fmt-ByteString-Lazy.html  Data-Fmt-ByteString.html  Data-Fmt-Code.html  Data-Fmt-Cons.html  Data-Fmt-Fixed.html  Data-Fmt-Functor.html  Data-Fmt-Kan.html  Data-Fmt-String.html  Data-Fmt-Text-Lazy.html  Data-Fmt-Text.html  Data-Fmt-Tree.html  Data-Fmt-Type.html  Data-Fmt.html  README.md  cabal.project  doc-index-37.html  doc-index-46.html  doc-index-58.html  doc-index-60.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  (+10 more)
.github/workflows/: ci.yml
doc/: design.md
doc/notes/: notes-2026-03-16.md
doc/plans/: sprint-1.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.md  sprint-6.md  sprint-7.md  todo.md
haddocks/: doc-index.html  doc-index.json  index.html
haddocks/array/src/: Data.Array.Base.html  Data.Array.IO.Internals.html  Data.Array.IO.html  Data.Array.ST.html  Data.Array.Storable.Internals.html
haddocks/base/: Data-Eq.html  Data-Ord.html  Foreign-C-String.html  Foreign-C-Types.html  Foreign-Storable.html  GHC-Show.html  System-Posix-Types.html  Text-Show.html  base.haddock  base.txt  doc-index-All.html  doc-index-C.html
haddocks/base/src/: Control.Applicative.html  Control.Arrow.html  Control.Category.html  Control.Concurrent.Chan.html  Control.Concurrent.MVar.html  Control.Concurrent.QSem.html  Control.Concurrent.QSemN.html  Control.Concurrent.html  Control.Exception.Base.html  Control.Exception.html  Control.Monad.Fail.html  Control.Monad.Fix.html  Control.Monad.IO.Class.html  Control.Monad.ST.Imp.html  Control.Monad.ST.Lazy.Imp.html  Control.Monad.Zip.html  Control.Monad.html  Data.Array.Byte.html  Data.Bifoldable.html  Data.Bifoldable1.html  Data.Bifunctor.html  Data.Bitraversable.html  Data.Bits.html  Data.Bool.html  Data.Char.html  Data.Complex.html  Data.Data.html  Data.Dynamic.html  Data.Either.html  Data.Fixed.html  Data.Foldable.html  Data.Foldable1.html  Data.Function.html  Data.Functor.Classes.html  Data.Functor.Compose.html  Data.Functor.Const.html  Data.Functor.Contravariant.html  Data.Functor.Identity.html  Data.Functor.Product.html  Data.Functor.Sum.html  (+188 more)
haddocks/binary/src/: Data.Binary.Class.html  Data.Binary.Generic.html  Data.Binary.Get.Internal.html  Data.Binary.Get.html  Data.Binary.Put.html  Data.Binary.html
haddocks/bytestring/src/: Data.ByteString.Builder.ASCII.html  Data.ByteString.Builder.Extra.html  Data.ByteString.Builder.Internal.html  Data.ByteString.Builder.Prim.ASCII.html  Data.ByteString.Builder.Prim.Internal.Base16.html  Data.ByteString.Builder.Prim.Internal.Floating.html  Data.ByteString.Builder.Prim.Internal.html  Data.ByteString.Builder.Prim.html  Data.ByteString.Builder.RealFloat.D2S.html  Data.ByteString.Builder.RealFloat.F2S.html  Data.ByteString.Builder.RealFloat.Internal.html  Data.ByteString.Builder.RealFloat.TableGenerator.html  Data.ByteString.Builder.RealFloat.html  Data.ByteString.Builder.html  Data.ByteString.Char8.html  Data.ByteString.Internal.Type.html  Data.ByteString.Lazy.Char8.html  Data.ByteString.Lazy.Internal.Deque.html  Data.ByteString.Lazy.Internal.html  Data.ByteString.Lazy.html  Data.ByteString.Short.Internal.html  Data.ByteString.Unsafe.html  Data.ByteString.html
haddocks/containers/src/: Data.Containers.ListUtils.html  Data.Graph.html  Data.IntMap.Internal.DeprecatedDebug.html  Data.IntMap.Internal.html  Data.IntMap.Merge.Strict.html  Data.IntMap.Strict.Internal.html  Data.IntMap.html  Data.IntSet.Internal.html  Data.Map.Internal.Debug.html  Data.Map.html  (+14 more)
haddocks/directory/: directory.haddock
haddocks/stringfmt/: Data-Fmt-ByteString.html  Data-Fmt-Code.html  Data-Fmt-Fixed.html  Data-Fmt-Functor.html  Data-Fmt-String.html  Data-Fmt-Text.html  Data-Fmt-Tree.html  Data-Fmt-Type.html  Data-Fmt.html  doc-index.json  stringfmt.haddock
haddocks/time/: time.haddock
haddocks/unix/: System-Posix-Fcntl.html  System-Posix-Files-ByteString.html  System-Posix-Files-PosixString.html  System-Posix-Files.html  System-Posix-Signals.html  System-Posix-Terminal-ByteString.html  System-Posix-Terminal-PosixString.html  System-Posix-Terminal.html  System-Posix-Unistd.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-P.html  doc-index-S.html  doc-index.json  unix.haddock  unix.txt
src/: Data.Fmt.ByteString.Lazy.html  Data.Fmt.ByteString.html  Data.Fmt.Code.html  Data.Fmt.Cons.html  Data.Fmt.Fixed.html  Data.Fmt.Functor.html  Data.Fmt.Kan.html  Data.Fmt.String.html  Data.Fmt.Text.Lazy.html  Data.Fmt.Text.html  Data.Fmt.Tree.html  Data.Fmt.Type.html  Data.Fmt.html
src/Data/: Fmt.hs
test/: Main.hs
(+239 files in other folders)
