cabal-version: 2.0

name:           stringfmt
version:        0.0.1
synopsis:       Type-safe formatting as an indexed continuation profunctor.
description:    Efficient string formatting
category:       Text, Data, Profunctors
stability:      Experimental
homepage:       https://github.com/cmk/stringfmt
bug-reports:    https://github.com/cmk/stringfmt/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2020-2026 Chris McKinlay
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/stringfmt

library
  exposed-modules:
      Data.Fmt
      Data.Fmt.Functor
      Data.Fmt.Fixed
      Data.Fmt.ByteString
      Data.Fmt.Cons
      Data.Fmt.Code
      Data.Fmt.String
      Data.Fmt.Text
      Data.Fmt.Tree
      Data.Fmt.Type

  default-language: Haskell2010

  hs-source-dirs:
      src

  ghc-options: -Wall

  build-depends:
      base               >= 4.16  && < 5.0
    , bytestring
    , profunctors
    , text

test-suite props
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

  other-modules:
      Test.Prop.Fixed
      Test.Prop.Functor
      Test.Prop.Tree
      Test.Prop.Fmt
      Test.Prop.String
      Test.Prop.ByteString
      Test.Prop.Cons
      Test.Prop.Code
      Test.Prop.Text

  build-depends:
      base               >= 4.16  && < 5.0
    , bytestring
    , hedgehog           >= 1.0
    , stringfmt
    , text
